# Project_CourthouseMonthlyCalendar

./: .gitignore  Monthly Calendar INTERNAL 2025.xlsx  Project_CourthouseMonthlyCalendar.txt  README.md  gen_court_session_calendar.ini  gen_court_session_calendar.py  gen_court_session_calendar.ses  gen_court_session_calendar.yaml  gen_court_session_calendar_orig.yaml  get_sessions_testing.py  main.py  pyproject.toml
.sql/: Justice.fc.sp_getCourtSessionsByYear.sql  qry_courtsessions.sql
.utils/: extract_merged_cell_data.py
.zsandbox/: ConnectingToMSSQLDatabase.odt  Notes.odt  court_calendar.db  court_calendar2.db  court_calendar_test.db  crdb_sp_getCourtSessionsByYear.py  gen_court_session_calendar.ini  gen_court_session_calendar.yaml  get_sessions_testing2.py  prep_court_session.py  qry_CourtSession.sql  sample.xlsx  sp_getcourtsessionsbyyear.db  test1.py  test_workbook.py  testing.py  testing_cell_font_changes.py  testing_db.py  testing_db_select.py  testing_db_sp.py  testing_db_sp_2.py  testing_db_sp_3.py  testing_db_sp_to_xls.xlsx  testing_db_sp_to_xlsx.py  xlsx_formating.py
data/: 202509.csv  Monthly Calendar INTERNAL 2025.ods  extracted_data.ods
