[project]
name = "project-courthousemonthlycalendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.0",
    "icecream>=2.1.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.43",
]
